--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -319,7 +319,8 @@ main {
 }
 
 .lore-p {
-    white-space: pre-line
+    white-space: pre-line;
+    font-size: 18px;
 }
 
 .lore-p:not(:first-child) {
