added style to usenames

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -323,6 +323,13 @@ main {
     font-size: 18px;
 }
 
+.lore-p a{
+    background: yellow;
+    color: black;
+    border-radius: 4px;
+    padding:0 3px;
+}
+
 .lore-p:not(:first-child) {
     margin-top: 10px;
 }
