--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,139 +1,3 @@
-@import url('../fonts/fonts-boska/WEB/css/boska.css');
-@import url('../fonts/fonts-satoshi/WEB/css/satoshi.css');
-
-*, html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style-type: none;
-}
-
-body {
-    font-size: 100%;
-    font-family: 'Satoshi-Medium', sans-serif;
-}
-
-.section-x {
-    max-width: 1250px;
-    margin: 0 auto;
-}
-
-.padding-x {
-    padding: 0 25px;
-}
-
-.section-title {
-    font-family: 'Boska', sans-serif;
-    margin-bottom: 30px;
-    font-size: 25px;
-}
-
-/* Header - Club Info */
-
-.header {
-    margin-bottom: 80px;
-}
-
-.navbar {
-    height: 70px;
-    /* border: 1px solid black; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    font-family: 'Boska', sans-serif;
-    font-size: 27px;
-    font-weight: 600;
-}
-
-.logo a, .logo a:visited {
-    color: black;
-}
-
-.menu {
-    display: flex;
-}
-
-.menu-item {
-    margin-left: 30px;
-    font-size: 18px;
-}
-
-.menu-item a, .menu-item a:visited {
-    color: #161616;
-}
-
-.menu-item:first-child {
-    margin-left: 0;
-}
-
-.warning-container {
-    margin-bottom: 40px;
-}
-
-.boldText {
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-
-.warning {
-    width: 100%;
-    background: rgb(255, 225, 58);
-    font-size: 17px;
-    padding: 5px 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.warning p {
-    display: flex;
-    align-items: center;
-    column-gap: 5px;
-}
-
-.warning .close {
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-
-/*.club-info {
-    display: grid;
-    grid-template-columns: 150px 400px;
-    column-gap: 20px;
-}
-
-.club-img {
-    width: 150px;
-    height: 190px;
-    background-color: lightgray;
-}
-
-.club-info-text {
-    font-family: 'Boska', sans-serif;
-    width: 400px;
-}
-
-.club-name {
-    margin-bottom: 10px;
-}
-
-.club-info-context{
-    font-family: 'Satoshi-Medium', sans-serif;
-    font-size: 16px;
-    text-align: justify;
-}*/
-/* Replies - Main */
-
-main {
-    margin-bottom: 80px;
-}
-
 .replies {
     display: grid;
     grid-template-columns: calc(32.5% - 15px) calc(32.5% - 15px) calc(32.5% - 15px);
@@ -151,20 +15,20 @@ main {
     height: min-content;
 }
 
-.reply-top {
+.replyTop {
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
 }
 
-.reply-author {
+.replyAuthor {
     display: grid;
     grid-template-columns: 62px auto;
     grid-template-rows: auto;
     align-items: start;
 }
 
-.reply-author-img {
+.replyAuthorImg {
     width: 52px;
     height: 52px;
     border: 1px solid red;
@@ -174,22 +38,22 @@ main {
     background-position: center;
 }
 
-.reply-author-name {
+.replyAuthorName {
     font-family: 'Satoshi-Medium', sans-serif;
     font-size: 18px;
 }
 
-.reply-author-title {
+.replyAuthorTitle {
     font-family: 'Satoshi-Medium', sans-serif;
 }
 
-.reply-text {
+.replyText {
     font-family: 'Satoshi-MediumItalic', sans-serif;
     font-size: 17px;
     white-space: pre-wrap;
 }
 
-.reply-features {
+.replyFeatures {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: 23px;
@@ -197,22 +61,22 @@ main {
     margin-top: 1px;
 }
 
-.reply-info-btn {
+.replyInfoBtn {
     font-size: 20px;
     position: relative;
 }
 
-.reply-info-btn .iconify {
+.replyInfoBtn .iconify {
     align-self: start;
     display: block;
     cursor: pointer;
 }
 
-.reply-info-btn:hover .description-box{
+.replyInfoBtn:hover .descriptionBox{
     display: block;
 }
 
-.reply-copy {
+.replyCopy {
     font-size: 22px;
     position: relative;
     top: -3px;
@@ -220,7 +84,7 @@ main {
     cursor: pointer;
 }
 
-.description-box {
+.descriptionBox {
     display: none;
     width: 330px;
     background-color: #F6F6F6;
@@ -244,7 +108,7 @@ main {
     font-size: 22px;
 }
 
-.thread-title {
+.threadTitle {
     font-family: 'Boska-Bold', sans-serif;
     font-size: 22px;
 }
@@ -262,7 +126,7 @@ main {
     column-gap: 50px;
 }
 
-.lore-content {
+.loreContent {
     overflow-y: scroll;
     /* background: #f3f3f3; */
     box-shadow: 0px 8px 30px -3px #d6d6d6;
@@ -272,70 +136,70 @@ main {
     padding: 10px;
 }
 
-.lore-content::-webkit-scrollbar {
+.loreContent::-webkit-scrollbar {
     width: 8px;
     background: rgb(235, 235, 235);
     border-radius: 4px;
 }
 
-.lore-content::-webkit-scrollbar-thumb {
+.loreContent::-webkit-scrollbar-thumb {
     background: rgb(209, 209, 209);
     border-radius: 4px;
 }
 
-.lore-content::-webkit-scrollbar-thumb:hover {
+.loreContent::-webkit-scrollbar-thumb:hover {
     background: rgb(189, 189, 189);
 }
 
-.lore-upper {
+.loreUpper {
     font-size: 20px;
     margin-bottom: 10px;
 }
 
-.lore-content-title {
+.loreContentTitle {
     padding: 3px 0;
-    font-size: 17px;
+    font-size: 18px;
     cursor: pointer;
 }
 
-.lore-content-subtitle {
+.loreContentSubtitle {
     padding-left: 20px;
-    font-size: 15px;
+    font-size: 16px;
     cursor: pointer;
 }
 
-.lore-content-title:hover, .lore-content-subtitle:hover {
+.loreContentTitle:hover, .loreContentSubtitle:hover {
     text-decoration: underline;
 }
 
-.lore-item {
+.loreItem {
     position: relative;
     padding-bottom: 30px;
 }
 
-.lore-title {
+.loreTitle {
     margin-bottom: 20px;
     font-size: 23px;
 }
 
-.lore-p {
+.loreP {
     white-space: pre-line;
     font-size: 18px;
     text-align: justify;
 }
 
-.lore-p a{
+.loreP a{
     background: yellow;
     color: black;
     border-radius: 4px;
     padding:0 3px;
 }
 
-.lore-p:not(:first-child) {
+.loreP:not(:first-child) {
     margin-top: 10px;
 }
 
-.keep-reading {
+.keepReading {
     background: linear-gradient(to top, #ebebeb 10%, transparent);
     border-radius: 5px;
     display: grid;
@@ -347,28 +211,4 @@ main {
     width: 100%;
     height: 160px;
     bottom: 0;
-}
-
-/* Footer */
-
-.footer {
-    border-top: 1px solid #161616;
-}
-
-.footer-content {
-    font-size: 18px;
-    text-align: center;
-    padding: 10px 0;
-    letter-spacing: 1px;
-    word-spacing: 4px;
-}
-
-.footer-content a {
-    color: black;
-    text-decoration: underline;
-}
-
-.footer-content a:visited {
-    color: black;
-    text-decoration: underline;
 }
