--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -72,7 +72,7 @@
     cursor: pointer;
 }
 
-.replyInfoBtn:hover .descriptionBox{
+.replyInfoBtn:hover .descriptionBox {
     display: block;
 }
 
@@ -121,13 +121,13 @@
 
 .lore {
     display: grid;
-    grid-template-columns: 350px auto;
-    grid-template-rows: 380px;
+    grid-template-columns: 35% auto;
     column-gap: 50px;
 }
 
 .loreContent {
     overflow-y: scroll;
+    max-height: 380px;
     /* background: #f3f3f3; */
     box-shadow: 0px 8px 30px -3px #d6d6d6;
     border-radius: 5px;
@@ -159,6 +159,10 @@
 .loreContentTitle {
     padding: 3px 0;
     font-size: 18px;
+    display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+    text-overflow: hidden;
     cursor: pointer;
 }
 
@@ -168,13 +172,23 @@
     cursor: pointer;
 }
 
-.loreContentTitle:hover, .loreContentSubtitle:hover {
+.loreContentTitle a,
+.loreContentSubtitle a {
+    color: black;
+}
+
+.loreContentTitle:hover,
+.loreContentSubtitle:hover {
     text-decoration: underline;
 }
 
 .loreItem {
     position: relative;
     padding-bottom: 30px;
+}
+
+.lorePreview {
+    overflow: hidden;
 }
 
 .loreTitle {
@@ -188,21 +202,23 @@
     text-align: justify;
 }
 
-.loreP a{
-    background: yellow;
-    color: black;
+.loreP a {
+    background-color: #9B5DE5;
+    color: white;
+    // color: #9B5DE5;
+    // text-decoration: underline;
     border-radius: 4px;
-    padding:0 3px;
+    padding: 2px 3px;
 }
 
-.loreP:not(:first-child) {
-    margin-top: 10px;
-}
+// .loreP:not(:first-child) {
+//     margin-top: 10px;
+// }
 
 .keepReading {
     background: linear-gradient(to top, #ebebeb 10%, transparent);
     border-radius: 5px;
-    display: grid;
+    display: none;
     justify-content: center;
     align-items: flex-end;
     padding-bottom: 20px;
@@ -211,4 +227,28 @@
     width: 100%;
     height: 160px;
     bottom: 0;
+}
+
+@media screen and (max-width: 992px) {
+    .replies {
+        grid-template-columns: calc(49.5% - 15px) calc(49.5% - 15px);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lore {
+        display: flex;
+        flex-direction: column-reverse;
+        row-gap: 30px;
+    }
+
+    .loreContent {
+        max-height: 250px;
+    }
+}
+
+@media screen and (max-width: 656px) {
+    .replies {
+        grid-template-columns: 100%;
+    }
 }
